examples/k8s/VAP-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-hostpath
  namespace: rbean
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  validations:
  - expression: "!object.spec.volumes.exists(v, has(v.hostPath) && v.hostPath.path != '/opt/zfs')"
    message: "Only /opt/zfs is permitted as hostPath"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-hostpath-binding
  namespace: rbean
spec:
  policyName: restrict-hostpath
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: rbean
